cloud/calico/calico-allow-traffic-from-my-ip.yml
# This policy whitelist your system's IP to the ALB IP address and port
calicoctl delete -f - <<EOF
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-traffic-from-my-ip
spec:
  applyOnForward: true
  preDNAT: true
  ingress:
  - action: Allow
    destination:
      nets:
      # (ALB) Automatic Load Balancer (= Ingress Subdomain)
      - 158.177.12.36/32
      - 161.156.160.23/32
      ports:
      - 80
      - 443
    protocol: TCP
    source:
      nets:
      -  90.116.255.133/32
  selector: ibm.role == 'worker_private'
  order: 2000
  types:
  - Ingress
EOF
